# cubietruck_ILI9341_8bit_bus_driver

gui2/: CMakeLists.txt  gui.c  gui.h  main.c  test.c  test.h  tft
gui2/LCD/: common.c  common.h  gpio_lib.h  lcd.c  lcd.h
py_simple/: lowgpio.py  testSetByte.py  testgpio.py  testspeed.py
simple/: gpio_lib.c  pysunxi.c  tft  tft.c  tft.py
